--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <!--Hero-->
         <section class="hero" id="hero">
             <div class="hero_image">
-
+                <img src="images/japan.jpg" class="hero_image-img">
             </div>
             <div class="hero_text">
-                <h1 class="hero_text-header">Hello, I'm Kenny.</h1>
+                <h1 class="hero_text-header">[ Hello, I'm Kenny. ]</h1>
                 <p class="hero_text-subhead">Currently a UX/UI Designer at HealCo.</p>
                 <p class="hero_text-para">Designer and developer primarily focused on websites and digital products. Huge lover of minimalistic and simple designs.</p>
             </div>
@@ -34,7 +34,7 @@
                 <!--Box 1-->
                 <div class="three_box">
                     <div class="three_box-icon">
-
+                        <img src="images/sketch.svg">
                     </div>
                     <div class="three_box-text">
                         <h4 class="three_box-text-header">Design.</h4>
@@ -44,7 +44,7 @@
                 <!--Box 2-->
                 <div class="three_box">
                     <div class="three_box-icon">
-
+                        <img src="images/development.svg">
                     </div>
                     <div class="three_box-text">
                         <h4 class="three_box-text-header">Develop.</h4>
@@ -54,7 +54,7 @@
                 <!--Box 3-->
                 <div class="three_box">
                     <div class="three_box-icon">
-
+                        <img src="images/ui.svg">
                     </div>
                     <div class="three_box-text">
                         <h4 class="three_box-text-header">UX / UI.</h4>
@@ -70,51 +70,49 @@
                 <!--Work 1-->
                 <div class="work_box">
                     <div class="work_box-img">
-
-                    </div>
-                    <div class="work_box-text">
+                        <img src="images/healco_banner.png">
+                    </div><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
                                 HealCo
                             </h3>
-                            <h6 class="work_box-text-subhead">User Experience & Interface - Web Design</h6>
+                            <h4 class="work_box-text-subhead">User Experience & Interface - Web Design</h4>
                             <p class="work_box-text-para">Shared medical space made simpler</p>
                             <div class="divider"></div>
-                            <button input="button" class="work_box-text-btn">Read More</button>
+                            <button input="button" class="work_box-text-btn">Read More 	
+                                <span class="arrow">&#8594;</span></button>
                         </div>
                     </div>
                 </div>
                 <!--Work 2-->
-                <div class="work_box">
+                <div class="work_box work_box-mid">
                     <div class="work_box-img">
-
-                    </div>
-                    <div class="work_box-text">
+                        <img src="images/datadove_banner.png">
+                    </div><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
                                 Data Dove
                             </h3>
-                            <h6 class="work_box-text-subhead">Web Design & Development - Logo</h6>
+                            <h4 class="work_box-text-subhead">Web Design & Development - Logo</h4>
                             <p class="work_box-text-para">Premium private hype Discord group</p>
                             <div class="divider"></div>
-                            <button input="button" class="work_box-text-btn">Read More</button>
+                            <button input="button" class="work_box-text-btn">Read More <span class="arrow">&#8594;</span></button>
                         </div>
                     </div>
                 </div>
                 <!--Work 3-->
                 <div class="work_box">
                     <div class="work_box-img">
-
-                    </div>
-                    <div class="work_box-text">
+                        <img src="images/rugs_banner.png">
+                    </div><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
                                 Rugs USA
                             </h3>
-                            <h6 class="work_box-text-subhead">Front End Web Developer - Web Designer</h6>
+                            <h4 class="work_box-text-subhead">Front End Web Developer - Web Designer</h4>
                             <p class="work_box-text-para">Exceptional quality at the best prices</p>
                             <div class="divider"></div>
-                            <button input="button" class="work_box-text-btn">Read More</button>
+                            <button input="button" class="work_box-text-btn">Read More <span class="arrow">&#8594;</span></button>
                         </div>
                     </div>
                 </div>
@@ -124,19 +122,27 @@
         <!--About-->
         <section class="about" id="about">
             <div class="about_img">
-
+                <img src="images/me.jpg" class="about_img-img">
             </div>
             <div class="about_text">
                 <p class="about_text-para">I’m a web designer and developer with experience in UX UI. I graduated from Queens College in New York City with a bachelors in Design, mainly Graphic Design. I am an avid fan of minimalistic, clean, and simple designs.
                 </p>
-                <h4 class="about_text-thanks">Thanks for stopping by!</h4>
+                <h3 class="about_text-thanks">Thanks for stopping by!</h3>
             </div>
         </section>
         
     </div>
 
     <footer class="footer" id="footer">
-
+        <div class="footer_divider"></div>
+        <div class="footer_text">
+            <div class="footer_left">
+                <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left">
+            </div>
+            <div class="footer_right">
+                <img src="images/airplane.svg" class="footer_icon"><p class="footer_text-message">Send a message at seo.kenny94@gmail.com</p>
+            </div>
+        </div>
     </footer>
 
 </body>
