base workfull view

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                             <h4 class="work_box-text-subhead">User Experience & Interface - Web Design</h4>
                             <p class="work_box-text-para">Shared medical space made simpler</p>
                             <div class="divider"></div>
-                            <button input="button" class="work_box-text-btn">Read More 	
+                            <a href="healco.html"><button input="button" class="work_box-text-btn">Read More 
                                 <span class="arrow">&#8594;</span></button>
+                            </a>
                         </div>
                     </div>
                 </div>
