--- a/healco.html
+++ b/healco.html
@@ -5,6 +5,7 @@
 <head>
     <title>Kenny Seo | Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
@@ -17,6 +18,10 @@
 
         <!--Hero-->
         <section class="hero" id="hero">
+            <div class="hero_head-text">
+                <h1 class="hero_head-header">HealCo</h1>
+                <p class="hero_head-para">Shared medical space made simpler</p>
+            </div>
             <div class="hero_image">
                 <img src="images/healco_banner.png" class="hero_image-img">
             </div>
@@ -36,8 +41,10 @@
                             <p class="work_box-text-para">HealCo is a web platform made for medical hosts and guests to lease or rent a space based on their specialties. It allows users to easily enlist their properties while using a matching system to connect lessors with the perfect lessee and vice versa. HealCo also has a huge focus on telemedicine - a way for patients to get medical assistance through digital and long distance means. HealCo is the Airbnb of medical office space and ambulatory surgery centers - and now the only official Health System Without Walls (HSWOW).</p>
                         </div>
                     </div>
-                    <div class="work_box-image">
-                        <img src="images/healco/healco_preview.png" class="work_box-image-img">
+                    <div>
+                        <a href="images/healco/healco_preview.png" class="work_box-image" data-fancybox>
+                            <img src="images/healco/healco_preview.png" class="work_box-image-img">
+                        </a>
                     </div>
                 </div>
 
@@ -49,8 +56,10 @@
                             <p class="work_box-text-para">One of the main reasons I was brought into HealCo was to redesign the entire user interface and user experience for their website, dashboard, and form flows. As HealCo was still a relatively new company, most of their tasks were focused on the completion of its core features. This left the design at a bare minimum. I organized the sections by order of importance and began my redesigns. One thing I had to keep in mind was scalability, as HealCo was still rapidly rolling out new features for its users.</p>
                         </div>
                     </div>
-                    <div class="work_box-image">
-                        <img src="images/healco/healco_fullflow.png" class="work_box-image-img">
+                    <div>
+                        <a href="images/healco/healco_fullflow.png" class="work_box-image" data-fancybox>
+                            <img src="images/healco/healco_fullflow.png" class="work_box-image-img">
+                        </a>
                     </div>
                 </div>
 
@@ -77,8 +86,10 @@
                             <p class="work_box-text-para">The audience that Rugs USA caters to are customers who want a great quality rug without having to break their wallets, primarily economical customers. It is crucial to keep in mind that there are experienced buyers and buyers who have never purchased a single rug before. I made sure to keep both users in mind while designing.</p>
                         </div>
                     </div>
-                    <div class="work_box-image">
-                        <img src="images/healco/healco_users.png" class="work_box-image-img">
+                    <div>
+                        <a href="images/healco/healco_users.png" class="work_box-image" data-fancybox>
+                            <img src="images/healco/healco_users.png" class="work_box-image-img">
+                        </a>
                     </div>
                     <div class="work_box-text">
                         <div class="work_box-text-contain">
@@ -103,8 +114,10 @@
                         <p class="work_box-text-para">My role was primarily as a front end web developer and designer. I was mainly assigned to the engineering team to help implement, fix, and update new features. I worked very closely with both the design team and analytics team to get a full understanding of what needs changes based on user activity. With the design team, I created new designs and mockups for websites, banners, event advertisements, and logo designs. It helped to be involved in both the engineering and design process to get a full view of what and how we were going to implement upcoming features. I also kept close contact with the sales and analytics team to receive user information regarding user activity, which I used in conjunction with the other information from both the engineering and design team.</p>
                     </div>
                 </div>
-                <div class="work_box-image">
-                    <img src="images/healco/healco_wireframe.png" class="work_box-image-img">
+                <div>
+                    <a href="images/healco/healco_wireframe.png" class="work_box-image" data-fancybox="">
+                        <img src="images/healco/healco_wireframe.png" class="work_box-image-img">
+                    </a>
                 </div>
             </div>
 
@@ -121,8 +134,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="work_box-image">
-                    <img src="images/healco/healco_webpage.png" class="work_box-image-img">
+                <div>
+                    <a href="images/healco/healco_webpage.png" class="work_box-image" data-fancybox="">
+                        <img src="images/healco/healco_webpage.png" class="work_box-image-img">
+                    </a>
                 </div>
                 <div class="work_box-text">
                     <div class="work_box-text-contain">
@@ -145,8 +160,10 @@
                             <p class="work_box-text-para">The main and biggest complaint was the amount of information required to finish signing up. Some of the questions were too specific, unknown or annoying for users to receive immediately, such as room dimensions in square feet, budgeting, and staff / room information. Users felt lost and frustrated when asked such specific questions before they could even get to the dashboard to see what HealCo had to offer. This led to some users leaving the form mid-way through the process.</p>
                         </div>
                     </div>
-                    <div class="work_box-image">
-                        <img src="images/healco/healco_flowlay.png" class="work_box-image-img">
+                    <div>
+                        <a href="images/healco/healco_flowlay.png" class="work_box-image" data-fancybox="">
+                            <img src="images/healco/healco_flowlay.png" class="work_box-image-img">
+                        </a>
                     </div>
                 </div>
 
@@ -158,8 +175,10 @@
                             <p class="work_box-text-para">For the main issue of requiring too much specific information, I first laid out the entire flow process and marked them by importance. Besides the mandatory question of personal information, I kept the questions that gave a general idea of what the user was looking for. I was able to remove half of the questions asked but still kept enough information for HealCo to categorize and create personalized dashboards and results for each user.</p>
                         </div>
                     </div>
-                    <div class="work_box-image">
-                        <img src="images/healco/healco_flowdone.png" class="work_box-image-img last">
+                    <div>
+                        <a href="images/healco/healco_flowdone.png" class="work_box-image" data-fancybox="">
+                            <img src="images/healco/healco_flowdone.png" class="work_box-image-img last">
+                        </a>
                     </div>
                 </div>
 
@@ -178,17 +197,25 @@
                         <p class="work_box-text-para">I laid out every feature and it’s flow for all users - Admins, Hosts, and Guests. I realized the lack of connections and links between information, making the user go through the entire dashboard to find the correlation information. I included many necessary hyperlinks for users to click if they wanted more information. I also added a visual of progression so users knew how they were doing in the current flow they were in. One thing I focused on was creating a sense of flow between each feature for the users to follow through. This helped users complete each step without being lost on what they’re required to do next.</p>
                     </div>
                 </div>
-                <div class="work_box-image">
-                    <img src="images/healco/healco_dash.png" class="work_box-image-img last">
+                <div>
+                    <a href="images/healco/healco_dash.png" class="work_box-image" data-fancybox="">
+                        <img src="images/healco/healco_dash.png" class="work_box-image-img last">
+                    </a>
                 </div>
-                <div class="work_box-image">
-                    <img src="images/healco/healco_dashfull.png" class="work_box-image-img last">
+                <div>
+                    <a href="images/healco/healco_dashfull.png" class="work_box-image" data-fancybox="">
+                        <img src="images/healco/healco_dashfull.png" class="work_box-image-img last">
+                    </a>
                 </div>
-                <div class="work_box-image">
-                    <img src="images/healco/healco_dashmobile.png" class="work_box-image-img last">
+                <div>
+                    <a href="images/healco/healco_dashmobile.png" class="work_box-image" data-fancybox="">
+                        <img src="images/healco/healco_dashmobile.png" class="work_box-image-img last">
+                    </a>
                 </div>
-                <div class="work_box-image">
-                    <img src="images/healco/healco_modals.png" class="work_box-image-img last">
+                <div>
+                    <a href="images/healco/healco_modals.png" class="work_box-image" data-fancybox="">
+                        <img src="images/healco/healco_modals.png" class="work_box-image-img last">
+                    </a>
                 </div>
             </div>
             
@@ -205,8 +232,10 @@
                             <p class="work_box-text-para">On the side, I created graphics for HealCo's resources and articles page. I used isometrics to keep a sleek, clean design and used HealCo's color pallete plus some complementary colors to keep a consistent yet vibrant look.</p>
                         </div>
                     </div>
-                    <div class="work_box-image">
-                        <img src="images/healco/healco_articles.png" class="work_box-image-img last">
+                    <div>
+                        <a href="images/healco/healco_articles.png" class="work_box-image" data-fancybox="">
+                            <img src="images/healco/healco_articles.png" class="work_box-image-img last">
+                        </a>
                     </div>
                 </div>
 
@@ -243,6 +272,14 @@
         </div>
     </footer>
 
+
+    <!--GSAP-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
+    
+    <script   src="https://code.jquery.com/jquery-3.5.1.js"   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="   crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js" integrity="sha512-j7/1CJweOskkQiS5RD9W8zhEG9D9vpgByNGxPIqkO5KrXrwyDAroM9aQ9w8J7oRqwxGyz429hPVk/zR6IOMtSA==" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
