added photo transitions on home

--- a/rugsusa.html
+++ b/rugsusa.html
@@ -26,7 +26,7 @@
                 <img src="images/rugs_banner.png" class="hero_image-img">
             </div>
             <div class="hero_quote rugsusa_back">
-                <h1 class="hero_quote-text">“Whether you’re listing your medical space or looking to lease, we make sharing simple.”</h1>
+                <h1 class="hero_quote-text">“We make it easier for buyers to find exactly what they’re looking for at great prices.”</h1>
             </div>
         </section>
 
