--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 
 <body>
 
+    <nav class="nav" id="nav">
+        <ul class="nav_list">
+            <li class="nav_list-li home_works">Works</li>
+            <li class="nav_list-li last_li home_about">About</li>
+        </ul>
+    </nav>
+
     <div class="container" id="main_contain">
 
         <!--Hero-->
         <section class="hero" id="hero">
             <div class="hero_image">
-                <img src="images/japan.jpg" class="hero_image-img">
+                <div class="image_hover-rel">
+                    <img src="images/transparent.png" class="hero_image-img">
+                    <p class="image_hover">trip to japan.</p>
+                </div>
             </div>
             <div class="hero_text">
                 <h1 class="hero_text-header">[ Hello, I'm Kenny. ]</h1>
@@ -115,7 +125,9 @@
                             <h4 class="work_box-text-subhead">Front End Web Developer - Web Designer</h4>
                             <p class="work_box-text-para">Exceptional quality at the best prices</p>
                             <div class="divider"></div>
-                            <button input="button" class="work_box-text-btn">Read More <span class="arrow">&#8594;</span></button>
+                            <a href="rugsusa.html"><button input="button" class="work_box-text-btn">Read More 
+                                <span class="arrow">&#8594;</span></button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -124,8 +136,9 @@
 
         <!--About-->
         <section class="about" id="about">
-            <div class="about_img">
-                <img src="images/me.jpg" class="about_img-img">
+            <div class="image_hover-rel israel">
+                <img src="images/transparent.png" class="about_img-img">
+                <p class="image_hover israel">trip to israel.</p>
             </div>
             <div class="about_text">
                 <p class="about_text-para">I’m a web designer and developer with experience in UX UI. I graduated from Queens College in New York City with a bachelors in Design, mainly Graphic Design. I am an avid fan of minimalistic, clean, and simple designs.
@@ -148,6 +161,13 @@
         </div>
     </footer>
 
+    <!--GSAP-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
+    
+    <script   src="https://code.jquery.com/jquery-3.5.1.js"   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="   crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js" integrity="sha512-j7/1CJweOskkQiS5RD9W8zhEG9D9vpgByNGxPIqkO5KrXrwyDAroM9aQ9w8J7oRqwxGyz429hPVk/zR6IOMtSA==" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
