--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <p class="hero_text-para">Designer and developer primarily focused on websites and digital products. Huge lover of minimalistic and simple designs.</p>
             </div>
             <div class="hero_cta">
-                <button input="button" class="hero_cta-btn left_cta">View Work</button>
-                <button input="button" class="hero_cta-btn right_cta">Contact Me</button>
+                <button input="button" class="hero_cta-btn left_cta home_works">View Work</button>
+                <button input="button" class="hero_cta-btn right_cta"><a href="mailto:seokenny.94@gmail.com">Contact Me</a></button>
             </div>
         </section>
 
@@ -48,7 +48,7 @@
                     </div>
                     <div class="three_box-text">
                         <h4 class="three_box-text-header">Design.</h4>
-                        <p class="three_box-text-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                        <p class="three_box-text-para">I create wireframes and high fidelity mockups to bring the vision as close to reality as possible.</p>
                     </div>
                 </div>
                 <!--Box 2-->
@@ -58,7 +58,7 @@
                     </div>
                     <div class="three_box-text">
                         <h4 class="three_box-text-header">Develop.</h4>
-                        <p class="three_box-text-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                        <p class="three_box-text-para">Using mockups, I make sure to ensure clean, dry code as well as responsiveness.</p>
                     </div>
                 </div>
                 <!--Box 3-->
@@ -68,7 +68,7 @@
                     </div>
                     <div class="three_box-text">
                         <h4 class="three_box-text-header">UX / UI.</h4>
-                        <p class="three_box-text-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                        <p class="three_box-text-para">I always keep the user in mind when creating smooth experiences and interfaces.</p>
                     </div>
                 </div>
             </div>
@@ -76,9 +76,9 @@
 
         <!--Works-->
         <section class="work" id="work">
-            <div class="work_contain">
+            <div class="work_contain" id="work_contain">
                 <!--Work 1-->
-                <div class="work_box">
+                <div class="work_box" id="work_box">
                     <div class="work_box-img">
                         <img src="images/healco_banner.png">
                     </div><!--text--><div class="work_box-text">
@@ -156,7 +156,7 @@
                 <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left">
             </div>
             <div class="footer_right">
-                <img src="images/airplane.svg" class="footer_icon"><p class="footer_text-message">Send a message at seo.kenny94@gmail.com</p>
+                <img src="images/airplane.svg" class="footer_icon"><p class="footer_text-message">Send a message at <a href="mailto:seo.kenny94@gmail.com" class="myemail">seo.kenny94@gmail.com</a></p>
             </div>
         </div>
     </footer>
