--- a/healco.html
+++ b/healco.html
@@ -14,6 +14,17 @@
 
 <body>
 
+    <nav class="nav" id="nav">
+        <div class="nav_list nav_work">
+            <a href="index.html">Back Home</a>
+            <div class="right_nav">
+                <a href="index.html#work" class="nav_list-li">Work</a>
+                <a href="index.html#about">About</a>
+            </div>
+        </div>
+    </nav>
+
+
     <div class="container" id="fullwork">
 
         <!--Hero-->
@@ -273,13 +284,12 @@
     </footer>
 
 
-    <!--GSAP-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
     
     <script   src="https://code.jquery.com/jquery-3.5.1.js"   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js" integrity="sha512-j7/1CJweOskkQiS5RD9W8zhEG9D9vpgByNGxPIqkO5KrXrwyDAroM9aQ9w8J7oRqwxGyz429hPVk/zR6IOMtSA==" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="js/work.js"></script>
 </body>
 
 </html>
