changed fonts and pics

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section class="about" id="about">
             <div class="image_hover-rel israel">
                 <img src="images/transparent.png" class="about_img-img">
-                <p class="image_hover israel">trip to israel.</p>
+                <p class="image_hover israel">trip to jordan.</p>
             </div>
             <div class="about_text">
                 <p class="about_text-para">I’m a web designer and developer with experience in UX UI. I graduated from Queens College in New York City with a bachelors in Design, mainly Graphic Design. I am an avid fan of minimalistic, clean, and simple designs.
@@ -156,7 +156,7 @@
                 <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left">
             </div>
             <div class="footer_right">
-                <img src="images/airplane.svg" class="footer_icon"><p class="footer_text-message">Send a message at <a href="mailto:seo.kenny94@gmail.com" class="myemail">seo.kenny94@gmail.com</a></p>
+                <img src="images/airplane.svg" class="footer_icon footer_icon-right"><p class="footer_text-message">Send a message at <a href="mailto:seo.kenny94@gmail.com" class="myemail">seo.kenny94@gmail.com</a></p>
             </div>
         </div>
     </footer>
