--- a/datadove.html
+++ b/datadove.html
@@ -16,10 +16,10 @@
 
     <nav class="nav" id="nav">
         <div class="nav_list nav_work">
-            <a href="index.html">Back Home</a>
+            <a href="index.html" class="nav_list-li">Back Home</a>
             <div class="right_nav">
                 <a href="index.html#work" class="nav_list-li">Work</a>
-                <a href="index.html#about">About</a>
+                <a href="index.html#about" class="nav_list-li">About</a>
             </div>
         </div>
     </nav>
@@ -55,7 +55,7 @@
 
                 <!--Goals-->
                 <div class="work_box" id="healco_goals">
-                    <div class="work_box-text">
+                    <div class="work_box-text midtext">
                         <div class="work_box-text-contain">
                             <h2 class="work_box-text-header">Goals</h2>
                             <p class="work_box-text-para">Due to Data Dove being a completely new group, it needed a logo and website to build its brand and recognition. Since Data Dove is purely a Discord based group, the website was an important gateway for potentially interested viewers to know the purpose of Data Dove. It was also going to be the only way for new users to gain access to the group.</p>
@@ -133,6 +133,21 @@
         
     </div>
 
+    <div class="views">
+        <div class="views_left">
+            <a href="healco.html">
+                <p class="views_left-top">PREV</p>
+                <p class="views_left-bot">HealCo</p>
+            </a>
+        </div>
+        <div class="views_right">
+            <a href="rugsusa.html">
+                <p class="views_right-top">NEXT</p>
+                <p class="views_right-bot">Rugs USA</p>
+            </a>
+        </div>
+    </div>
+
     <footer class="footer" id="footer">
         <div class="footer_divider"></div>
         <div class="footer_text">
@@ -140,7 +155,7 @@
                 <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left">
             </div>
             <div class="footer_right">
-                <img src="images/airplane.svg" class="footer_icon"><p class="footer_text-message">Send a message at seo.kenny94@gmail.com</p>
+                <img src="images/airplane.svg" class="footer_icon footer_icon-right"><p class="footer_text-message">Send a message at <a href="mailto:seo.kenny94@gmail.com" class="myemail">seo.kenny94@gmail.com</a></p>
             </div>
         </div>
     </footer>
