--- a/healco.html
+++ b/healco.html
@@ -16,10 +16,10 @@
 
     <nav class="nav" id="nav">
         <div class="nav_list nav_work">
-            <a href="index.html">Back Home</a>
+            <a href="index.html" class="nav_list-li">Back Home</a>
             <div class="right_nav">
                 <a href="index.html#work" class="nav_list-li">Work</a>
-                <a href="index.html#about">About</a>
+                <a href="index.html#about" class="nav_list-li">About</a>
             </div>
         </div>
     </nav>
@@ -271,6 +271,21 @@
         
     </div>
 
+    <div class="views">
+        <div class="views_left">
+            <a href="rugsusa.html">
+                <p class="views_left-top">PREV</p>
+                <p class="views_left-bot">Rugs USA</p>
+            </a>
+        </div>
+        <div class="views_right">
+            <a href="datadove.html">
+                <p class="views_right-top">NEXT</p>
+                <p class="views_right-bot">Data Dove</p>
+            </a>
+        </div>
+    </div>
+
     <footer class="footer" id="footer">
         <div class="footer_divider"></div>
         <div class="footer_text">
@@ -278,7 +293,7 @@
                 <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left">
             </div>
             <div class="footer_right">
-                <img src="images/airplane.svg" class="footer_icon"><p class="footer_text-message">Send a message at seo.kenny94@gmail.com</p>
+                <img src="images/airplane.svg" class="footer_icon footer_icon-right"><p class="footer_text-message">Send a message at <a href="mailto:seo.kenny94@gmail.com" class="myemail">seo.kenny94@gmail.com</a></p>
             </div>
         </div>
     </footer>
