--- a/datadove.html
+++ b/datadove.html
@@ -3,13 +3,14 @@
 <html>
 
 <head>
-    <title>Kenny Seo | Web Developer</title>
+    <title>Data Dove | Kenny Seo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
     </style>
+        <link rel="shortcut icon" href="images/favicon.png">
 </head>
 
 <body>
