--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html>
 
 <head>
-    <title>Kenny Seo | Web Developer</title>
+    <title>Kenny Seo | Digital Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="images/favicon.png">
 </head>
 
 <body>
