new fullwork banners

--- a/datadove.html
+++ b/datadove.html
@@ -34,7 +34,7 @@
                 <p class="hero_head-para">Premium private hype Discord group</p>
             </div>
             <div class="hero_image">
-                <img src="images/datadove_banner.png" class="hero_image-img">
+                <img src="images/datadove/datadove_noshad.png" class="hero_image-img">
             </div>
             <div class="hero_quote datadove_back">
                 <h1 class="hero_quote-text">“We’re focused on helping you secure the most coveted and hype products on the market.”</h1>
