--- a/healco.html
+++ b/healco.html
@@ -35,7 +35,7 @@
                 <p class="hero_head-para">Shared medical space made simpler</p>
             </div>
             <div class="hero_image">
-                <img src="images/healco_banner.png" class="hero_image-img">
+                <img src="images/healco/healco_noshad.png" class="hero_image-img">
             </div>
             <div class="hero_quote">
                 <h1 class="hero_quote-text">“Whether you’re listing your medical space or looking to lease, we make sharing simple.”</h1>
