--- a/rugsusa.html
+++ b/rugsusa.html
@@ -34,7 +34,7 @@
                 <p class="hero_head-para">Exceptional quality at the best prices</p>
             </div>
             <div class="hero_image">
-                <img src="images/rugs_banner.png" class="hero_image-img">
+                <img src="images/rugsusa/rugs_noshad.png" class="hero_image-img">
             </div>
             <div class="hero_quote rugsusa_back">
                 <h1 class="hero_quote-text">“We make it easier for buyers to find exactly what they’re looking for at great prices.”</h1>
