added anchor to images

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             <div class="work_contain" id="work_contain">
                 <!--Work 1-->
                 <div class="work_box" id="work_box">
-                    <div class="work_box-img">
+                    <a href="healco.html" class="work_box-img">
                         <img src="images/healco_banner.png">
-                    </div><!--text--><div class="work_box-text">
+                    </a><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
                                 HealCo
@@ -98,9 +98,9 @@
                 </div>
                 <!--Work 2-->
                 <div class="work_box work_box-mid">
-                    <div class="work_box-img">
+                    <a href="datadove.html" class="work_box-img">
                         <img src="images/datadove_banner.png">
-                    </div><!--text--><div class="work_box-text">
+                    </a><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
                                 Data Dove
@@ -116,9 +116,9 @@
                 </div>
                 <!--Work 3-->
                 <div class="work_box">
-                    <div class="work_box-img">
+                    <a href="rugsusa.html" class="work_box-img">
                         <img src="images/rugs_banner.png">
-                    </div><!--text--><div class="work_box-text">
+                    </a><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
                                 Rugs USA
