--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Kenny Seo | Digital Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/favicon.png">
 </head>
@@ -21,7 +22,11 @@
     <div class="container" id="main_contain">
 
         <!--Hero-->
-        <section class="hero" id="hero">
+        <section class="hero" id="hero"        
+        data-aos="fade-up"
+        data-aos-duration="750"
+        data-aos-easing="ease-in-out"
+        >
             <div class="hero_image">
                 <div class="image_hover-rel">
                     <img src="images/transparent.png" class="hero_image-img">
@@ -40,7 +45,11 @@
         </section>
 
         <!--Info - Three-->
-        <section class="three" id="three">
+        <section class="three" id="three" 
+        data-aos="fade-up"
+        data-aos-duration="750"
+        data-aos-easing="ease-in-out"
+        >
             <div class="three_contain">
                 <!--Box 1-->
                 <div class="three_box">
@@ -77,7 +86,10 @@
 
         <!--Works-->
         <section class="work" id="work">
-            <div class="work_contain" id="work_contain">
+            <div class="work_contain" id="work_contain"        data-aos="fade-up"
+            data-aos-duration="750"
+            data-aos-easing="ease-in-out"
+            >
                 <!--Work 1-->
                 <div class="work_box" id="work_box">
                     <a href="healco.html" class="work_box-img">
@@ -136,7 +148,10 @@
         </section>
 
         <!--About-->
-        <section class="about" id="about">
+        <section class="about" id="about"        data-aos="fade-up"
+        data-aos-duration="750"
+        data-aos-easing="ease-in-out"
+        >
             <div class="image_hover-rel israel">
                 <img src="images/transparent.png" class="about_img-img">
                 <p class="image_hover israel">trip to jordan.</p>
@@ -166,9 +181,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
     
+    
     <script   src="https://code.jquery.com/jquery-3.5.1.js"   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="   crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js" integrity="sha512-j7/1CJweOskkQiS5RD9W8zhEG9D9vpgByNGxPIqkO5KrXrwyDAroM9aQ9w8J7oRqwxGyz429hPVk/zR6IOMtSA==" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
+
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
