added temp new animation for fade bug

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
         <!--Hero-->
         <section class="hero" id="hero"        
-        data-aos="fade-up"
-        data-aos-duration="750"
-        data-aos-easing="ease-in-out"
         >
             <div class="hero_image">
                 <div class="image_hover-rel">
@@ -33,12 +30,18 @@
                     <p class="image_hover">trip to japan.</p>
                 </div>
             </div>
-            <div class="hero_text">
+            <div class="hero_text"        data-aos="fade-up"
+            data-aos-duration="750"
+            data-aos-easing="ease-in-out">
                 <h1 class="hero_text-header">[ Hello, I'm Kenny. ]</h1>
                 <p class="hero_text-subhead">Currently a UX/UI Designer at HealCo.</p>
                 <p class="hero_text-para">Designer and developer primarily focused on websites and digital products. Huge lover of minimalistic and simple designs.</p>
             </div>
-            <div class="hero_cta">
+            <div class="hero_cta"
+            data-aos="fade-up"
+            data-aos-duration="750"
+            data-aos-easing="ease-in-out"
+            data-aos-delay="200">
                 <button input="button" class="hero_cta-btn left_cta home_works">View Work</button>
                 <button input="button" class="hero_cta-btn right_cta"><a href="mailto:seokenny.94@gmail.com">Contact Me</a></button>
             </div>
