--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
         <div class="footer_divider"></div>
         <div class="footer_text">
             <div class="footer_left">
-                <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left">
+                <p class="footer_text-designed">Designed and developed by Kenny Seo</p><img src="images/plant.svg" class="footer_icon footer_icon-left plant">
+                <div class="wasclicked">
+                    <img src="images/image0.png" class="wasclicked_img">
+                </div>
             </div>
             <div class="footer_right">
                 <img src="images/airplane.svg" class="footer_icon footer_icon-right"><p class="footer_text-message">Send a message at <a href="mailto:seo.kenny94@gmail.com" class="myemail">seo.kenny94@gmail.com</a></p>
