--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </a><!--text--><div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h3 class="work_box-text-header">
-                                HealCo
+                                HealCo <span class="current">- Present</span>
                             </h3>
                             <h4 class="work_box-text-subhead">User Experience & Interface - Web Design</h4>
                             <p class="work_box-text-para">Shared medical space made simpler</p>
