--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="hero_image">
                 <div class="image_hover-rel">
                     <img src="images/transparent.png" class="hero_image-img">
-                    <p class="image_hover">trip to japan.</p>
+                    <p class="image_hover">Trip to Japan</p>
                 </div>
             </div>
             <div class="hero_text"        data-aos="fade-up"
@@ -157,7 +157,7 @@
         >
             <div class="image_hover-rel israel">
                 <img src="images/transparent.png" class="about_img-img">
-                <p class="image_hover israel">trip to jordan.</p>
+                <p class="image_hover israel">Trip to Jordan</p>
             </div>
             <div class="about_text">
                 <p class="about_text-para">I’m a web designer and developer with experience in UX UI. I graduated from Queens College in New York City with a bachelors in Design, mainly Graphic Design. I am an avid fan of minimalistic, clean, and simple designs.
