--- a/index.html
+++ b/index.html
@@ -30,21 +30,20 @@
                     <p class="image_hover">Trip to Japan</p>
                 </div>
             </div>
-            <div class="hero_text"        data-aos="fade-up"
+            <div data-aos="fade-up"
             data-aos-duration="750"
             data-aos-easing="ease-in-out">
-                <h1 class="hero_text-header">[ Hello, I'm Kenny. ]</h1>
-                <p class="hero_text-subhead">Currently a UX/UI Designer at HealCo.</p>
-                <p class="hero_text-para">Designer and developer primarily focused on websites and digital products. Huge lover of minimalistic and simple designs.</p>
+                <div class="hero_text"        >
+                    <h1 class="hero_text-header">[ Hello, I'm Kenny. ]</h1>
+                    <p class="hero_text-subhead">Currently a UX/UI Designer at HealCo.</p>
+                    <p class="hero_text-para">Designer and developer primarily focused on websites and digital products. Huge lover of minimalistic and simple designs.</p>
+                </div>
+                <div class="hero_cta">
+                    <button input="button" class="hero_cta-btn left_cta home_works">View Work</button>
+                    <button input="button" class="hero_cta-btn right_cta"><a href="mailto:seokenny.94@gmail.com">Contact Me</a></button>
+                </div>
             </div>
-            <div class="hero_cta"
-            data-aos="fade-up"
-            data-aos-duration="750"
-            data-aos-easing="ease-in-out"
-            data-aos-delay="200">
-                <button input="button" class="hero_cta-btn left_cta home_works">View Work</button>
-                <button input="button" class="hero_cta-btn right_cta"><a href="mailto:seokenny.94@gmail.com">Contact Me</a></button>
-            </div>
+
         </section>
 
         <!--Info - Three-->
