added icon and updated favicon

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/logo2.png">
 </head>
 
 <body>
 
     <nav class="nav" id="nav">
         <ul class="nav_list">
+            <img src="images/logo2.png" class="top_left-icon">
             <li class="nav_list-li home_works">Works</li>
             <li class="nav_list-li last_li home_about">About</li>
         </ul>
