made logo into anchor index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="nav" id="nav">
         <ul class="nav_list">
-            <img src="images/logo2.png" class="top_left-icon">
+            <a href="index.html"><img src="images/logo2.png" class="top_left-icon"></a>
             <li class="nav_list-li home_works">Works</li>
             <li class="nav_list-li last_li home_about">About</li>
         </ul>
