--- a/healco.html
+++ b/healco.html
@@ -105,7 +105,7 @@
                     <div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h2 class="work_box-text-header">Users</h2>
-                            <p class="work_box-text-para">The audience that Rugs USA caters to are customers who want a great quality rug without having to break their wallets, primarily economical customers. It is crucial to keep in mind that there are experienced buyers and buyers who have never purchased a single rug before. I made sure to keep both users in mind while designing.</p>
+                            <p class="work_box-text-para">The majority of the users were hosts who were looking to rent out their medically approved space, guests who were looking for medical equipment provided space, and the admins of HealCo who mediated the information and requests behind the platform. While the hosts and guests have a similar experience, I had to keep in mind the extra features that the admins would have.</p>
                         </div>
                     </div>
                     <div>
@@ -116,7 +116,8 @@
                     <div class="work_box-text">
                         <div class="work_box-text-contain">
                             <h2 class="work_box-text-header">Roles</h2>
-                            <p class="work_box-text-para">The audience that Rugs USA caters to are customers who want a great quality rug without having to break their wallets, primarily economical customers. It is crucial to keep in mind that there are experienced buyers and buyers who have never purchased a single rug before. I made sure to keep both users in mind while designing.</p>
+                            <p class="work_box-text-para">I work closely with 4 other full stack engineers while I am the sole designer. The engineers have their own features they are all working on individually, but keep everyone in the loop when we have our weekly standup. I work closely with each of them to completely understand the features they are working on while also providing my mock ups and designs to get feedback.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +134,7 @@
                 <div class="work_box-text">
                     <div class="work_box-text-contain">
                         <h2 class="work_box-text-header">Website Redesign</h2>
-                        <p class="work_box-text-para">My role was primarily as a front end web developer and designer. I was mainly assigned to the engineering team to help implement, fix, and update new features. I worked very closely with both the design team and analytics team to get a full understanding of what needs changes based on user activity. With the design team, I created new designs and mockups for websites, banners, event advertisements, and logo designs. It helped to be involved in both the engineering and design process to get a full view of what and how we were going to implement upcoming features. I also kept close contact with the sales and analytics team to receive user information regarding user activity, which I used in conjunction with the other information from both the engineering and design team.</p>
+                        <p class="work_box-text-para">The biggest issue with HealCo's website was the lack of information. Users had no idea what HealCo did, how it worked, and whether or not HealCo was a legitimate service. Before coming up with a design, I figured out the questions that users ask before committing to a product or service. This was how I would determine the necessary information that the website would provide to the suers.</p>
                     </div>
                 </div>
                 <div>
