fixed rugsusa text

--- a/rugsusa.html
+++ b/rugsusa.html
@@ -112,7 +112,7 @@
                     <div class="work_box-text midtext">
                         <div class="work_box-text-contain">
                             <h2 class="work_box-text-header">Roles</h2>
-                            <p class="work_box-text-para">The audience that Rugs USA caters to are customers who want a great quality rug without having to break their wallets, primarily economical customers. It is crucial to keep in mind that there are experienced buyers and buyers who have never purchased a single rug before. I made sure to keep both users in mind while designing.</p>
+                            <p class="work_box-text-para">My role was primarily as a front end web developer and designer. I was mainly assigned to the engineering team to help implement, fix, and update new features. I worked very closely with both the design team and analytics team to get a full understanding of what needs changes based on user activity. With the design team, I created new designs and mockups for websites, banners, event advertisements, and logo designs. It helped to be involved in both the engineering and design process to get a full view of what and how we were going to implement upcoming features. I also kept close contact with the sales and analytics team to receive user information regarding user activity, which I used in conjunction with the other information from both the engineering and design team.</p>
                         </div>
                     </div>
                     <div>
