removed divider (temp)

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             </h3>
                             <h4 class="work_box-text-subhead">User Experience & Interface - Web Design</h4>
                             <p class="work_box-text-para">Shared medical space made simpler</p>
-                            <div class="divider"></div>
+                            <!-- <div class="divider"></div> -->
                             <a href="healco.html"><button input="button" class="work_box-text-btn">Read More 
                                 <span class="arrow">&#8594;</span></button>
                             </a>
@@ -122,7 +122,7 @@
                             </h3>
                             <h4 class="work_box-text-subhead">Web Design & Development - Logo</h4>
                             <p class="work_box-text-para">Premium private hype Discord group</p>
-                            <div class="divider"></div>
+                            <!-- <div class="divider"></div> -->
                             <a href="datadove.html"><button input="button" class="work_box-text-btn">Read More 
                                 <span class="arrow">&#8594;</span></button>
                             </a>
@@ -140,7 +140,7 @@
                             </h3>
                             <h4 class="work_box-text-subhead">Front End Web Developer - Web Designer</h4>
                             <p class="work_box-text-para">Exceptional quality at the best prices</p>
-                            <div class="divider"></div>
+                            <!-- <div class="divider"></div> -->
                             <a href="rugsusa.html"><button input="button" class="work_box-text-btn">Read More 
                                 <span class="arrow">&#8594;</span></button>
                             </a>
